# quickscript

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  quickscript.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
quickscript/: __init__.py  __main__.py  cli.py  collect.py  quickscript.py
quickscript/plugins/: graphql.py  grpc.py  rest.py  server_meta.py  zeromq.py
quickscript/server/: graphql.py  grpc.py  rest.py  zmq.py
scripts/: basic.py
tests/: test_basic.py  test_graphql.py
